--- a/Past_benchmarking_SLV_overview.Rmd
+++ b/Past_benchmarking_SLV_overview.Rmd
@@ -42,8 +42,8 @@ library(rbokeh)
 library(readxl)
 library(dplyr)
 
-caps<-read_excel("~/OneDrive/OECD_Files_KChalmers/Past_Benchmarking/0_Indicator_Tables/map_figures.xlsx")
-gdp <- read_excel("~/OneDrive/OECD_Files_KChalmers/Past_Benchmarking/0_Indicator_Tables/2019_SLV_gdp.xlsx")
+caps<-read_excel("~/Desktop/OECD/DEV-Multi-dimensional Reviews - Past Benchmarking Tool/Past_Benchmarking/0_Indicator_Tables/map_figures.xlsx")
+gdp <- read_excel("~/Desktop/OECD/DEV-Multi-dimensional Reviews - Past Benchmarking Tool/Past_Benchmarking/0_Indicator_Tables/2019_SLV_gdp.xlsx")
 names(gdp)[2]<-"country"
 
 clist <- gdp$country
@@ -77,7 +77,7 @@ library(dplyr)
 library(DT)
 
 # Upload excel of output of GDP function through changing file path
-gdp.output <- read_excel("~/OneDrive/OECD_Files_KChalmers/Past_Benchmarking/0_Indicator_Tables/2019_SLV_gdp.xlsx")
+gdp.output <- read_excel("~/Desktop/OECD/DEV-Multi-dimensional Reviews - Past Benchmarking Tool/Past_Benchmarking/0_Indicator_Tables/2019_SLV_gdp.xlsx")
 
 # Data cleaning
 gdp.output <- gdp.output[,-1]
@@ -95,8 +95,8 @@ These graphs show the full time series for the indicator, constant GDP per capit
 
 ```{r , message=FALSE, class.source="bg-success", echo=FALSE, fig.show="hold", out.width="50%"} 
 # Upload indicator database & output table
-ind.db<-read_excel("~/OneDrive/OECD_Files_KChalmers/Past_Benchmarking/indicator.db.xlsx")
-gdp.output <- read_excel("~/OneDrive/OECD_Files_KChalmers/Past_Benchmarking/0_Indicator_Tables/2019_SLV_gdp.xlsx")
+ind.db<-read_excel("~/Desktop/OECD/DEV-Multi-dimensional Reviews - Past Benchmarking Tool/Past_Benchmarking/indicator.db.xlsx")
+gdp.output <- read_excel("~/Desktop/OECD/DEV-Multi-dimensional Reviews - Past Benchmarking Tool/Past_Benchmarking/0_Indicator_Tables/2019_SLV_gdp.xlsx")
 
 # Parse out time series
 indicator <- ind.db[,c(1:2,3)]
@@ -191,8 +191,8 @@ ________
 ```{r , message=FALSE, class.source="bg-success", echo=FALSE}
 
 
-caps<-read_excel("~/OneDrive/OECD_Files_KChalmers/Past_Benchmarking/0_Indicator_Tables/map_figures.xlsx")
-emp <- read_excel("~/OneDrive/OECD_Files_KChalmers/Past_Benchmarking/0_Indicator_Tables/2019_SLV_employ.xlsx")
+caps<-read_excel("~/Desktop/OECD/DEV-Multi-dimensional Reviews - Past Benchmarking Tool/Past_Benchmarking/0_Indicator_Tables/map_figures.xlsx")
+emp <- read_excel("~/Desktop/OECD/DEV-Multi-dimensional Reviews - Past Benchmarking Tool/Past_Benchmarking/0_Indicator_Tables/2019_SLV_employ.xlsx")
 names(emp)[2]<-"country"
 
 clist <- emp$country
@@ -217,7 +217,7 @@ figure(width = 800, height = 450, padding_factor = 0) %>%
 
 ```{r , message=FALSE, warning = FALSE, class.source="bg-success", echo=FALSE, fig.show="hold", out.width="50%"}
 library(readxl)
-emp.output <- read_excel("~/OneDrive/OECD_Files_KChalmers/Past_Benchmarking/0_Indicator_Tables/2019_SLV_employ.xlsx")
+emp.output <- read_excel("~/Desktop/OECD/DEV-Multi-dimensional Reviews - Past Benchmarking Tool/Past_Benchmarking/0_Indicator_Tables/2019_SLV_employ.xlsx")
 
 emp.output <- emp.output[,-1]
 
@@ -226,7 +226,7 @@ emp.output$`Value at goal`<-round(emp.output$`Value at goal`, digits=2)
 
 DT::datatable(emp.output, rownames = FALSE)
 
-ind.db<-read_excel("~/OneDrive/OECD_Files_KChalmers/Past_Benchmarking/indicator.db.xlsx")
+ind.db<-read_excel("~/Desktop/OECD/DEV-Multi-dimensional Reviews - Past Benchmarking Tool/Past_Benchmarking/indicator.db.xlsx")
 
 indicator <- ind.db[,c(1:2,4)]
 names(indicator)[3]<-"value"
@@ -286,8 +286,8 @@ ________
 ```{r , message=FALSE, class.source="bg-success", echo=FALSE}
 
 
-caps<-read_excel("~/OneDrive/OECD_Files_KChalmers/Past_Benchmarking/0_Indicator_Tables/map_figures.xlsx")
-liter <- read_excel("~/OneDrive/OECD_Files_KChalmers/Past_Benchmarking/0_Indicator_Tables/2019_SLV_liter.xlsx")
+caps<-read_excel("~/Desktop/OECD/DEV-Multi-dimensional Reviews - Past Benchmarking Tool/Past_Benchmarking/0_Indicator_Tables/map_figures.xlsx")
+liter <- read_excel("~/Desktop/OECD/DEV-Multi-dimensional Reviews - Past Benchmarking Tool/Past_Benchmarking/0_Indicator_Tables/2019_SLV_liter.xlsx")
 names(liter)[2]<-"country"
 
 clist <- liter$country
@@ -310,13 +310,13 @@ figure(width = 800, height = 450, padding_factor = 0) %>%
 
 
 ```{r , class.source="bg-success", echo=FALSE, fig.show="hold", out.width="50%", message=FALSE}
-liter.output<- read_excel("~/OneDrive/OECD_Files_KChalmers/Past_Benchmarking/0_Indicator_Tables/2019_SLV_liter.xlsx")
+liter.output<- read_excel("~/Desktop/OECD/DEV-Multi-dimensional Reviews - Past Benchmarking Tool/Past_Benchmarking/0_Indicator_Tables/2019_SLV_liter.xlsx")
 
 liter.output <- liter.output[,-1]
 
 DT::datatable(liter.output, rownames = FALSE)
 
-ind.db<-read_excel("~/OneDrive/OECD_Files_KChalmers/Past_Benchmarking/indicator.db.xlsx")
+ind.db<-read_excel("~/Desktop/OECD/DEV-Multi-dimensional Reviews - Past Benchmarking Tool/Past_Benchmarking/indicator.db.xlsx")
 
 indicator <- ind.db[,c(1:2,5)]
 names(indicator)[3]<-"value"
@@ -383,8 +383,8 @@ ________
 ```{r , message=FALSE, class.source="bg-success", echo=FALSE}
 
 
-caps<-read_excel("~/OneDrive/OECD_Files_KChalmers/Past_Benchmarking/0_Indicator_Tables/map_figures.xlsx")
-myr <- read_excel("~/OneDrive/OECD_Files_KChalmers/Past_Benchmarking/0_Indicator_Tables/2019_SLV_meanyears.xlsx")
+caps<-read_excel("~/Desktop/OECD/DEV-Multi-dimensional Reviews - Past Benchmarking Tool/Past_Benchmarking/0_Indicator_Tables/map_figures.xlsx")
+myr <- read_excel("~/Desktop/OECD/DEV-Multi-dimensional Reviews - Past Benchmarking Tool/Past_Benchmarking/0_Indicator_Tables/2019_SLV_meanyears.xlsx")
 
 names(myr)[2]<-"country"
 
@@ -408,13 +408,13 @@ figure(width = 800, height = 450, padding_factor = 0) %>%
 
 
 ```{r , class.source="bg-success", echo=FALSE, fig.show="hold", out.width="50%", message=FALSE}
-myrs.output<- read_excel("~/OneDrive/OECD_Files_KChalmers/Past_Benchmarking/0_Indicator_Tables/2019_SLV_meanyears.xlsx")
+myrs.output<- read_excel("~/Desktop/OECD/DEV-Multi-dimensional Reviews - Past Benchmarking Tool/Past_Benchmarking/0_Indicator_Tables/2019_SLV_meanyears.xlsx")
 
 myrs.output <- myrs.output[,-1]
 
 DT::datatable(myrs.output, rownames = FALSE)
 
-ind.db<-read_excel("~/OneDrive/OECD_Files_KChalmers/Past_Benchmarking/indicator.db.xlsx")
+ind.db<-read_excel("~/Desktop/OECD/DEV-Multi-dimensional Reviews - Past Benchmarking Tool/Past_Benchmarking/indicator.db.xlsx")
 
 indicator <- ind.db[,c(1:2,7)]
 names(indicator)[3]<-"value"
@@ -486,8 +486,8 @@ ________
 
 ```{r , message=FALSE, class.source="bg-success", echo=FALSE}
 
-caps<-read_excel("~/OneDrive/OECD_Files_KChalmers/Past_Benchmarking/0_Indicator_Tables/map_figures.xlsx")
-nskool <- read_excel("~/OneDrive/OECD_Files_KChalmers/Past_Benchmarking/0_Indicator_Tables/2019_SLV_noschool.xlsx")
+caps<-read_excel("~/Desktop/OECD/DEV-Multi-dimensional Reviews - Past Benchmarking Tool/Past_Benchmarking/0_Indicator_Tables/map_figures.xlsx")
+nskool <- read_excel("~/Desktop/OECD/DEV-Multi-dimensional Reviews - Past Benchmarking Tool/Past_Benchmarking/0_Indicator_Tables/2019_SLV_noschool.xlsx")
 names(nskool)[2]<-"country"
 
 clist <- nskool$country
@@ -509,14 +509,14 @@ figure(width = 800, height = 450, padding_factor = 0) %>%
 ```
 
 ```{r , message=FALSE, class.source="bg-success", echo=FALSE, fig.show="hold", out.width="50%"}
-noskl.output<-read_excel("~/OneDrive/OECD_Files_KChalmers/Past_Benchmarking/0_Indicator_Tables/2019_SLV_noschool.xlsx")
+noskl.output<-read_excel("~/Desktop/OECD/DEV-Multi-dimensional Reviews - Past Benchmarking Tool/Past_Benchmarking/0_Indicator_Tables/2019_SLV_noschool.xlsx")
 
 noskl.output <- noskl.output[order(noskl.output$`Comparison country`),]
 noskl.output <- noskl.output[,-1]
 
 DT::datatable(noskl.output, rownames = FALSE)
 
-ind.db<-read_excel("~/OneDrive/OECD_Files_KChalmers/Past_Benchmarking/indicator.db.xlsx")
+ind.db<-read_excel("~/Desktop/OECD/DEV-Multi-dimensional Reviews - Past Benchmarking Tool/Past_Benchmarking/indicator.db.xlsx")
 
 indicator <- ind.db[,c(1:2,6)]
 names(indicator)[3]<-"value"
@@ -587,8 +587,8 @@ ________
 
 ```{r , message=FALSE, class.source="bg-success", echo=FALSE}
 
-caps<-read_excel("~/OneDrive/OECD_Files_KChalmers/Past_Benchmarking/0_Indicator_Tables/map_figures.xlsx")
-eci <- read_excel("~/OneDrive/OECD_Files_KChalmers/Past_Benchmarking/0_Indicator_Tables/2019_SLV_eci.xlsx")
+caps<-read_excel("~/Desktop/OECD/DEV-Multi-dimensional Reviews - Past Benchmarking Tool/Past_Benchmarking/0_Indicator_Tables/map_figures.xlsx")
+eci <- read_excel("~/Desktop/OECD/DEV-Multi-dimensional Reviews - Past Benchmarking Tool/Past_Benchmarking/0_Indicator_Tables/2019_SLV_eci.xlsx")
 names(eci)[2]<-"country"
 
 clist <- eci$country
@@ -610,13 +610,13 @@ figure(width = 800, height = 450, padding_factor = 0) %>%
 ```
 
 ```{r , class.source="bg-success", echo=FALSE, fig.show="hold", out.width="50%", message=FALSE}
-eci.output<-read_excel("~/OneDrive/OECD_Files_KChalmers/Past_Benchmarking/0_Indicator_Tables/2019_SLV_eci.xlsx")
+eci.output<-read_excel("~/Desktop/OECD/DEV-Multi-dimensional Reviews - Past Benchmarking Tool/Past_Benchmarking/0_Indicator_Tables/2019_SLV_eci.xlsx")
 
 eci.output <- eci.output[,-1]
 
 DT::datatable(eci.output, rownames = FALSE)
 
-ind.db<-read_excel("~/OneDrive/OECD_Files_KChalmers/Past_Benchmarking/indicator.db.xlsx")
+ind.db<-read_excel("~/Desktop/OECD/DEV-Multi-dimensional Reviews - Past Benchmarking Tool/Past_Benchmarking/indicator.db.xlsx")
 
 indicator <- ind.db[,c(1:2,8)]
 names(indicator)[3]<-"value"
@@ -682,8 +682,8 @@ ________
 
 ```{r , message=FALSE, class.source="bg-success", echo=FALSE}
 
-caps<-read_excel("~/OneDrive/OECD_Files_KChalmers/Past_Benchmarking/0_Indicator_Tables/map_figures.xlsx")
-output <- read_excel("~/OneDrive/OECD_Files_KChalmers/Past_Benchmarking/0_Indicator_Tables/2019_SLV_lab.xlsx")
+caps<-read_excel("~/Desktop/OECD/DEV-Multi-dimensional Reviews - Past Benchmarking Tool/Past_Benchmarking/0_Indicator_Tables/map_figures.xlsx")
+output <- read_excel("~/Desktop/OECD/DEV-Multi-dimensional Reviews - Past Benchmarking Tool/Past_Benchmarking/0_Indicator_Tables/2019_SLV_lab.xlsx")
 names(output)[2]<-"country"
 
 clist <- output$country
@@ -706,14 +706,14 @@ figure(width = 800, height = 450, padding_factor = 0) %>%
 ```
 
 ```{r , message=FALSE, class.source="bg-success", echo=FALSE, fig.show="hold", out.width="50%"}
-lab.output<-read_excel("~/OneDrive/OECD_Files_KChalmers/Past_Benchmarking/0_Indicator_Tables/2019_SLV_lab.xlsx")
+lab.output<-read_excel("~/Desktop/OECD/DEV-Multi-dimensional Reviews - Past Benchmarking Tool/Past_Benchmarking/0_Indicator_Tables/2019_SLV_lab.xlsx")
 
 lab.output <- lab.output[,-1]
 
 lab.output$`Match value`<-round(lab.output$`Match value`, digits=2)
 DT::datatable(lab.output, rownames = FALSE)
 
-ind.db<-read_excel("~/OneDrive/OECD_Files_KChalmers/Past_Benchmarking/indicator.db.xlsx")
+ind.db<-read_excel("~/Desktop/OECD/DEV-Multi-dimensional Reviews - Past Benchmarking Tool/Past_Benchmarking/indicator.db.xlsx")
 
 indicator <- ind.db[,c(1:2,9)]
 names(indicator)[3]<-"value"
