--- a/Past_benchmarking_CIV_overview.Rmd
+++ b/Past_benchmarking_CIV_overview.Rmd
@@ -263,6 +263,7 @@ for(i in 1:row){
 }
 
 ```
+[Back to top](#)
 
 ________
 
@@ -452,6 +453,7 @@ for(i in 1:row){
   )
 }
 ```
+[Back to top](#)
 
 ________
 
@@ -639,6 +641,8 @@ for(i in 1:row){
   )
 }
 ```
+[Back to top](#)
+
 ________
 
 #### **Indicator:** Percent of population without schooling {#Noskool}
@@ -825,6 +829,7 @@ for(i in 1:row){
   )
 }
 ```
+[Back to top](#)
 
 ________
 #### **Indicator:** Economic complexity index {#ECI}
@@ -1011,6 +1016,7 @@ for(i in 1:row){
   )
 }
 ```
+[Back to top](#)
 
 ________
 #### **Indicator:** Output per worker (GDP constant 2010 USD){#Lab}
@@ -1198,6 +1204,7 @@ for(i in 1:row){
   )
 }
 ```
+[Back to top](#)
 
 ________
 
@@ -1205,7 +1212,7 @@ ________
 
 **2018 literacy rate in Cote d'Ivoire :** 47.16%<br>
 **Match threshold :** ±1.0% <br>
-**Goal :** >98.1% <br>
+**Goal :** 1.25x <br>
 **Source:** WDI <p>
 
 ```{r , message=FALSE, fig.align = "center", class.source="bg-success", echo=FALSE}
@@ -1387,3 +1394,6 @@ for(i in 1:row){
   )
 }
 ```
+
+[Back to top](#)
+
