--- a/Past_benchmarking_Laos_overview.Rmd
+++ b/Past_benchmarking_Laos_overview.Rmd
@@ -263,6 +263,7 @@ for(i in 1:row){
 }
 
 ```
+[Back to top](#)
 
 ________
 
@@ -451,6 +452,7 @@ for(i in 1:row){
   )
 }
 ```
+[Back to top](#)
 
 ________
 
@@ -637,6 +639,8 @@ for(i in 1:row){
   )
 }
 ```
+[Back to top](#)
+
 ________
 
 #### **Indicator:** Percent of population without schooling {#Noskool}
@@ -822,6 +826,7 @@ for(i in 1:row){
   )
 }
 ```
+[Back to top](#)
 
 ________
 #### **Indicator:** Economic complexity index {#ECI}
@@ -1007,6 +1012,7 @@ for(i in 1:row){
   )
 }
 ```
+[Back to top](#)
 
 ________
 #### **Indicator:** Output per worker (GDP constant 2010 USD){#Lab}
@@ -1193,6 +1199,7 @@ for(i in 1:row){
   )
 }
 ```
+[Back to top](#)
 
 ________
 
@@ -1200,11 +1207,10 @@ ________
 
 **2018 literacy rate in Lao PDR :** 84.6%<br>
 **Match threshold :** ±1.0% <br>
-**Goal :** >98.1% <br>
+**Goal :** 1.25x <br>
 **Source:** WDI <p>
 
 ```{r , message=FALSE, fig.align = "center", class.source="bg-success", echo=FALSE}
-
 setwd("~/Desktop/OECD/DEV-Multi-dimensional Reviews - Past Benchmarking Tool/Past_Benchmarking/")
 
 caps<-read_excel("0_Indicator_Tables/map_figures.xlsx") 
@@ -1381,3 +1387,5 @@ for(i in 1:row){
   )
 }
 ```
+
+[Back to top](#)
